# Book-Recommendation-System

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.yaml  main.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  template.py  vercel.json
.github/workflows/: ci.yaml
artifacts/ML_model/: model.pkl
artifacts/common_objects/: book_names.pkl
artifacts/serialized_objects/: books_final_ratings.pkl  final_ratings.pkl
artifacts/vector_embeddings/books_vectorstore/9db10edb-c57a-45e4-8c66-69d471a65290/: index_metadata.pickle
config/: config.yaml  schema.yaml
notebooks/: book_recommender.ipynb  ml-book_recommender.ipynb  semantic_recommender.ipynb  text_classification.ipynb
src/: exception.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/config/: configuration.py
src/constant/: constants.py
src/constants/: __init__.py
src/core/: config_entity.py  configuration.py  exception.py
src/entity/: config_entity.py
src/pipeline/: data_ingestion_pipeline.py  ml_pipeline.py
src/utils/: __init__.py
