# Configuration file for the Python package

[metadata]
name = Book-Recommendation-System
author = Subinoy Bera
author_email = subinoyberadgp@gmail.com
description = End to End Book Recommendation System
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/SubinoyBera/Book-Recommendation-System/
classifiers =
    Topic :: Scientific/Engineering :: Machine Learning
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent


[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11
install_requires =
    numpy>=2.2,<3
    pandas>=2.2,<3
    scikit-learn>=1.7,<2
    scipy>=1.15,<2
    requests>=2.32,<3
    langchain>=0.3,<0.4
    langchain-core>=0.3,<0.4
    langchain-community>=0.3,<0.4
    langchain-google-genai>=2.1,<3
    langchain-chroma>=0.2,<0.3
    streamlit>=1.46,<2
    PyYAML>=6.0,<7
    ensure>=1.0,<2
    python-box>=7.3,<8
    python-dotenv>=1.1,<2
    pydantic>=2.11,<3
    pysqlite3-binary>=0.4,<1


[options.extras_require]
dev =
    docker>=7.1,<8
    matplotlib>=3.10,<4
    seaborn>=0.13,<1
    ipykernel>=6.29,<7
    kagglehub>=0.3,<1


[options.packages.find]
where = src